# wcf-client-rust

./: README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  styles.css  uno.config.ts  vite-env.d.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: endpoints.rs  entity.rs  global.rs  http_server.rs  lib.rs  main.rs  task_file.rs  tauri_commands.rs  tray.rs  ws_client.rs
src-tauri/src/events/: event_bus.rs  event_handler.rs  http_message_handler.rs  log_message_handler.rs  mod.rs  ws_message_handler.rs
src-tauri/src/handler/startup/: service_handler.rs
src-tauri/src/pulgins/: mod.rs
src-tauri/src/pulgins/forward_task/: mod.rs  task_file.rs  task_manager.rs
src-tauri/src/service/: global_service.rs  http_server_service.rs  mod.rs
src-tauri/src/wcferry/: mod.rs  socketio_client.rs
src-tauri/src/wcferry/lib/: spy.exp  spy.lib
src/assets/: main.css
src/components/: Greet.vue  http-server.vue  logger.vue  service.vue  socketio-client.vue
src/layout/: header.vue  layout.vue  left-menu.vue  right-pannel.vue
src/pages/: config.vue  contact.vue  index.vue  task.vue
src/pages/msg/: index.vue
src/pages/task/: edit.vue  index.vue
src/service/: contact_service.ts  task_service.ts
src/stores/: config.ts  logger.ts  service.ts
src/types/: base.d.ts  config.d.ts  contact.d.ts  task.d.ts
